force-app/main/default/objects/bvd_connector__Work_Item_Field_Conflict__c.object
<CustomObject>
    <fields>
        <fullName>bvd_connector__BvD_Field_Type__c</fullName>
        <label>BvD Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__BvD_Value__c</fullName>
        <label>BvD Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Choice__c</fullName>
        <label>Choice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <label>Salesforce Value</label>
                </value>
                <value>
                    <fullName>BvD</fullName>
                    <label>BvD Value</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bvd_connector__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Salesforce_Value__c</fullName>
        <label>Salesforce Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Work_Item__c</fullName>
        <label>Work Item</label>
        <referenceTo>bvd_connector__BvD_Job_Work_Item__c</referenceTo>
        <relationshipLabel>Field Conflicts</relationshipLabel>
        <relationshipName>Field_Conflicts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Item Field Conflict</label>
    <nameField>
        <displayFormat>WIFC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Item Field Conflicts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>